# ReMessyDesktop

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  remessydesktop.py
docs/: config_format.md
src/: app_util.py  config_util.py
src/classification/: __init__.py  classisland.py  cses.py  file_type.py  regex.py  registerer.py  results.py  scorer.py
src/classification/classisland/: __init__.py
src/classification/scorer/: __init__.py  data.json
src/placer/: __init__.py  default.py  registerer.py
src/util/: classisland_connect.py  config.py  generate-stubs.ps1  log.py  versioning.py
src/watching/: __init__.py  classisland.py  cses.py  watcher.py
tests/: cses_example.yaml
tests/classifier_test/: test_cses_classifier.py  test_file_type_classifier.py  test_regex_classifier.py
tests/config_test/: test_priority_detection.py
tests/watcher_test/: test_cses_watcher_duration.py
vendors/pythonnet-stub-generator/csharp/PythonNetStubGenerator/: PythonNetStubGenerator.csproj
vendors/pythonnet-stub-generator/csharp/PythonNetStubTool/: PythonNetStubGenerator.Tool.csproj
