[project]
name = "ReMessyDesktop"
version = "0.1.0pre1"
version-codename = "Flower Forest"
description = "Refactor NoMessyDesktop."
requires-python = ">=3.13"
dependencies = [
    "cseslib4py==0.2.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "pyside6>=6.10.2",
    "python-dateutil>=2.9.0.post0",
    "ruff>=0.15.4",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[project.optional-dependencies]
dev = [
    "pluggy>=1.6.0",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "setuptools>=82.0.0",
]
