[project]
name = "ReMessyDesktop"
version = "0.1.0pre1"
version-codename = "Flower Forest"
description = "Refactor NoMessyDesktop."
requires-python = ">=3.13"
dependencies = [
    "cseslib4py==0.2.0",
    "jieba>=0.42.1",
    "loguru>=0.7.3",
    "pyside6>=6.10.2",
    "python-dateutil>=2.9.0.post0",
    "pythonnet>=3.0.5",
    "ruff>=0.15.4",
    "send2trash>=2.1.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[project.optional-dependencies]
dev = [
    "pluggy>=1.6.0",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
    "setuptools>=82.0.0",
    "ty>=0.0.19",
]

[tool.ty.src]
exclude = [
    "src/util/classisland_connect.py",
    "typings/",
    "vendors/",
    "docs/config_format.md"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "dist",
    "node_modules",
    "venv",
    "src/util/classisland_connect.py",
    "typings/",
    "vendors/",
    "docs/config_format.md"
]
